--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <main>
             <h1>ErikAndEricShow</h1>
             <div class="youtube" style="position:relative;height:0;padding-bottom:56.25%">
-                <iframe src="https://www.youtube.com/embed/9IAk61TH6U8?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0"
+                <iframe src="https://www.youtube.com/watch?v=YifORPYlWhg&t=1622s" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0"
                     allowfullscreen></iframe>
             </div>
         </main>
