--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
         <main>
             <h1>ErikAndEricShow</h1>
             <div class="youtube" style="position:relative;height:0;padding-bottom:56.25%">
-                <iframe src="https://youtu.be/YifORPYlWhg" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0"
-                    allowfullscreen></iframe>
+               <iframe src="https://www.youtube.com/embed/YifORPYlWhg?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
             </div>
         </main>
         <section id="social">
